src2/recursiveGaussian-hipified/log_run_bench.err
In file included from main.cu:14:
./helper_math.h:1456:30: error: use of overloaded operator '/' is ambiguous (with operand types 'float2' (aka 'HIP_vector_type<float, 2>') and 'float2')
 1456 |     float2 y = clamp((x - a) / (b - a), 0.0f, 1.0f);
      |                      ~~~~~~~ ^ ~~~~~~~
/opt/rocm-6.2.0/include/hip/amd_detail/amd_hip_vector_types.h:577:65: note: candidate function
  577 |         friend __HOST_DEVICE__ inline constexpr HIP_vector_type operator/(
      |                                                                 ^
./helper_math.h:981:35: note: candidate function
  981 | inline __host__ __device__ float2 operator/(float2 a, float2 b)
      |                                   ^
./helper_math.h:1457:14: error: use of overloaded operator '*' is ambiguous (with operand types 'float2' (aka 'HIP_vector_type<float, 2>') and 'float2')
 1457 |     return (y*y*(make_float2(3.0f) - (make_float2(2.0f)*y)));
      |             ~^~
/opt/rocm-6.2.0/include/hip/amd_detail/amd_hip_vector_types.h:561:65: note: candidate function
  561 |         friend __HOST_DEVICE__ inline constexpr HIP_vector_type operator*(
      |                                                                 ^
./helper_math.h:752:35: note: candidate function
  752 | inline __host__ __device__ float2 operator*(float2 a, float2 b)
      |                                   ^
./helper_math.h:1457:56: error: use of overloaded operator '*' is ambiguous (with operand types 'float2' (aka 'HIP_vector_type<float, 2>') and 'float2')
 1457 |     return (y*y*(make_float2(3.0f) - (make_float2(2.0f)*y)));
      |                                       ~~~~~~~~~~~~~~~~~^~
/opt/rocm-6.2.0/include/hip/amd_detail/amd_hip_vector_types.h:561:65: note: candidate function
  561 |         friend __HOST_DEVICE__ inline constexpr HIP_vector_type operator*(
      |                                                                 ^
./helper_math.h:752:35: note: candidate function
  752 | inline __host__ __device__ float2 operator*(float2 a, float2 b)
      |                                   ^
./helper_math.h:1461:30: error: use of overloaded operator '/' is ambiguous (with operand types 'float3' (aka 'HIP_vector_type<float, 3>') and 'float3')
 1461 |     float3 y = clamp((x - a) / (b - a), 0.0f, 1.0f);
      |                      ~~~~~~~ ^ ~~~~~~~
/opt/rocm-6.2.0/include/hip/amd_detail/amd_hip_vector_types.h:577:65: note: candidate function
  577 |         friend __HOST_DEVICE__ inline constexpr HIP_vector_type operator/(
      |                                                                 ^
./helper_math.h:1004:35: note: candidate function
 1004 | inline __host__ __device__ float3 operator/(float3 a, float3 b)
      |                                   ^
./helper_math.h:1462:14: error: use of overloaded operator '*' is ambiguous (with operand types 'float3' (aka 'HIP_vector_type<float, 3>') and 'float3')
 1462 |     return (y*y*(make_float3(3.0f) - (make_float3(2.0f)*y)));
      |             ~^~
/opt/rocm-6.2.0/include/hip/amd_detail/amd_hip_vector_types.h:561:65: note: candidate function
  561 |         friend __HOST_DEVICE__ inline constexpr HIP_vector_type operator*(
      |                                                                 ^
./helper_math.h:821:35: note: candidate function
  821 | inline __host__ __device__ float3 operator*(float3 a, float3 b)
      |                                   ^
./helper_math.h:1462:56: error: use of overloaded operator '*' is ambiguous (with operand types 'float3' (aka 'HIP_vector_type<float, 3>') and 'float3')
 1462 |     return (y*y*(make_float3(3.0f) - (make_float3(2.0f)*y)));
      |                                       ~~~~~~~~~~~~~~~~~^~
/opt/rocm-6.2.0/include/hip/amd_detail/amd_hip_vector_types.h:561:65: note: candidate function
  561 |         friend __HOST_DEVICE__ inline constexpr HIP_vector_type operator*(
      |                                                                 ^
./helper_math.h:821:35: note: candidate function
  821 | inline __host__ __device__ float3 operator*(float3 a, float3 b)
      |                                   ^
./helper_math.h:1466:30: error: use of overloaded operator '/' is ambiguous (with operand types 'float4' (aka 'HIP_vector_type<float, 4>') and 'float4')
 1466 |     float4 y = clamp((x - a) / (b - a), 0.0f, 1.0f);
      |                      ~~~~~~~ ^ ~~~~~~~
/opt/rocm-6.2.0/include/hip/amd_detail/amd_hip_vector_types.h:577:65: note: candidate function
  577 |         friend __HOST_DEVICE__ inline constexpr HIP_vector_type operator/(
      |                                                                 ^
./helper_math.h:1029:35: note: candidate function
 1029 | inline __host__ __device__ float4 operator/(float4 a, float4 b)
      |                                   ^
./helper_math.h:1467:14: error: use of overloaded operator '*' is ambiguous (with operand types 'float4' (aka 'HIP_vector_type<float, 4>') and 'float4')
 1467 |     return (y*y*(make_float4(3.0f) - (make_float4(2.0f)*y)));
      |             ~^~
/opt/rocm-6.2.0/include/hip/amd_detail/amd_hip_vector_types.h:561:65: note: candidate function
  561 |         friend __HOST_DEVICE__ inline constexpr HIP_vector_type operator*(
      |                                                                 ^
./helper_math.h:896:35: note: candidate function
  896 | inline __host__ __device__ float4 operator*(float4 a, float4 b)
      |                                   ^
./helper_math.h:1467:56: error: use of overloaded operator '*' is ambiguous (with operand types 'float4' (aka 'HIP_vector_type<float, 4>') and 'float4')
 1467 |     return (y*y*(make_float4(3.0f) - (make_float4(2.0f)*y)));
      |                                       ~~~~~~~~~~~~~~~~~^~
/opt/rocm-6.2.0/include/hip/amd_detail/amd_hip_vector_types.h:561:65: note: candidate function
  561 |         friend __HOST_DEVICE__ inline constexpr HIP_vector_type operator*(
      |                                                                 ^
./helper_math.h:896:35: note: candidate function
  896 | inline __host__ __device__ float4 operator*(float4 a, float4 b)
      |                                   ^
main.cu:104:32: error: use of overloaded operator '*' is ambiguous (with operand types 'float4' (aka 'HIP_vector_type<float, 4>') and 'float4')
  104 |     float4 yc = xc + (yp - xc) * make_float4(a, a, a, a);   
      |                      ~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~~~~~~~
/opt/rocm-6.2.0/include/hip/amd_detail/amd_hip_vector_types.h:561:65: note: candidate function
  561 |         friend __HOST_DEVICE__ inline constexpr HIP_vector_type operator*(
      |                                                                 ^
./helper_math.h:896:35: note: candidate function
  896 | inline __host__ __device__ float4 operator*(float4 a, float4 b)
      |                                   ^
main.cu:120:32: error: use of overloaded operator '*' is ambiguous (with operand types 'float4' (aka 'HIP_vector_type<float, 4>') and 'float4')
  120 |     float4 yc = xc + (yp - xc) * make_float4(a, a, a, a);
      |                      ~~~~~~~~~ ^ ~~~~~~~~~~~~~~~~~~~~~~~
/opt/rocm-6.2.0/include/hip/amd_detail/amd_hip_vector_types.h:561:65: note: candidate function
  561 |         friend __HOST_DEVICE__ inline constexpr HIP_vector_type operator*(
      |                                                                 ^
./helper_math.h:896:35: note: candidate function
  896 | inline __host__ __device__ float4 operator*(float4 a, float4 b)
      |                                   ^
main.cu:164:13: error: use of overloaded operator '*' is ambiguous (with operand types 'float4' (aka 'HIP_vector_type<float, 4>') and 'float4')
  164 |     yb = xp * make_float4(coefp,coefp,coefp,coefp); 
      |          ~~ ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/rocm-6.2.0/include/hip/amd_detail/amd_hip_vector_types.h:561:65: note: candidate function
  561 |         friend __HOST_DEVICE__ inline constexpr HIP_vector_type operator*(
      |                                                                 ^
./helper_math.h:896:35: note: candidate function
  896 | inline __host__ __device__ float4 operator*(float4 a, float4 b)
      |                                   ^
main.cu:193:13: error: use of overloaded operator '*' is ambiguous (with operand types 'float4' (aka 'HIP_vector_type<float, 4>') and 'float4')
  193 |     yn = xn * make_float4(coefn,coefn,coefn,coefn); 
      |          ~~ ^ ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/opt/rocm-6.2.0/include/hip/amd_detail/amd_hip_vector_types.h:561:65: note: candidate function
  561 |         friend __HOST_DEVICE__ inline constexpr HIP_vector_type operator*(
      |                                                                 ^
./helper_math.h:896:35: note: candidate function
  896 | inline __host__ __device__ float4 operator*(float4 a, float4 b)
      |                                   ^
13 errors generated when compiling for gfx90a.
failed to execute:/opt/rocm-6.2.0/lib/llvm/bin/clang++  --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a --offload-arch=gfx90a  -std=c++14 -Wall -I../include -O3 -c -x hip main.cu -o "main.o"
make: *** [Makefile.AMD:51: main.o] Error 1
